# DataManager

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Ingest.cpp  Mesh.cpp  NeuroDataManager.cpp  NeuroDataManager.h.in  README.md  Skeleton.cpp
BlockManager/: BlockManager.cpp  BlockManager.h  CMakeLists.txt  Manifest.cpp  Manifest.h
BlockManager/Blocks/: AnnoBlock.cpp  AnnoBlock.h  Block.cpp  Block.h  FilesystemBlock.cpp  FilesystemBlock.h  Types.h
BlockManager/Datastore/: BlockDataStore.h  FilesystemBlockStore.cpp  FilesystemBlockStore.h
DataArray/: BloscArray.cpp  BloscArray.h  CMakeLists.txt  DataArray.h  TiffArray.cpp  TiffArray.h
Docker/: docker-compose.yml
Docker/ndm_deps/: Dockerfile
Docker/web/: default.conf
Docker/web_gzip/: Dockerfile  default.conf
Mesh/: CMakeLists.txt  ExtractNeuroglancerMesh.cpp  ExtractNeuroglancerMesh.h  MarchingCubes.h  Mesh.h  MeshExtractor.cpp  MeshExtractor.h  PolygonalMesh.h  TriangleMesh.h  TriangleMeshIO.cpp  TriangleMeshIO.h
Mesh/include/: Algebra.h  Geometry.h  Geometry.inl  Interpolate.h
Mesh/include/PLY/: Ply.h  Ply.inl  PlyFile.h  PlyFile.inl
Skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  SkeletonBuilder.cpp  SkeletonBuilder.h
Util/: JPEG.h  Morton.h
docs/: Coordinates.md  NDM.md  NDMExample.md
tests/: BlockManagerTests.cpp  CMakeLists.txt  DataArrayTests.cpp
